Added authenticate button and functionality to add valid Strava API auth
